--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Intro to Git</title>
+  <script src="js/app.js"></script>
 </head>
 <body>
   <h1>Hello</h1>
