--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="js/app.js"></script>
+  <link rel="stylesheet" href="css/styles.css">
   <meta charset="UTF-8">
-  <title>Intro to Git</title>
-  <script src="public/js/app.js"></script>
+  <title>git practice</title>
 </head>
 <body>
-  <h1>Hello</h1>
+  <h1>hello</h1>
   
 </body>
 </html>
