change h1 to aloha

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="js/app.js"></script>
-  <link rel="stylesheet" href="css/styles.css">
-  <meta charset="UTF-8">
-  <title>git practice</title>
+	<meta charset="UTF-8">
+	<titl>practice</title>
 </head>
 <body>
-  <h1>good day</h1>
-  
+<h1>Aloha Oahu</h1>
+	
 </body>
 </html>
